# reposnap

./: README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/reposnap/: cli.py  fetcher.py  formatter.py
tests/: conftest.py  test_cli.py  test_formatter.py
