[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rook-reposnap"
version = "0.1.2"
description = "Turn any GitHub repo into a clean markdown digest of recent activity."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
reposnap = "reposnap.cli:main"

[project.urls]
Repository = "https://github.com/rook-builds/reposnap"

[tool.hatch.build.targets.wheel]
packages = ["src/reposnap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
